--- a/Dockerfile.playwright
+++ b/Dockerfile.playwright
@@ -8,4 +8,4 @@ RUN npm ci
 # Copy the tests and config 
 COPY frontend/playwright.config.ts ./
 COPY frontend/e2e ./e2e
-CMD ["npx", "playwright", "test"]
+ENTRYPOINT ["npx", "playwright", "test"]
