--- a/backend/TaxCalculator/TaxCalculator.csproj
+++ b/backend/TaxCalculator/TaxCalculator.csproj
@@ -19,5 +19,6 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.5" />
   </ItemGroup>
 </Project>
