docker compose works for e2e tests!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,6 @@ services:
       timeout: 5s
       retries: 5
       
-  migrate:
-    build: .
-    container_name: migrations
-    entrypoint: ["/app/efbundle"]
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      ConnectionStrings__Postgres: "Host=postgres;Port=5432;Database=taxcalculator;Username=postgres;Password=postgres"
 
   app:
     build: .
@@ -33,26 +24,38 @@ services:
       - "8080:8080"
     environment:
       ConnectionStrings__Postgres: "Host=postgres;Port=5432;Database=taxcalculator;Username=postgres;Password=postgres"
+
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 5s
       timeout: 5s
       retries: 10
       start_period: 5s
+        
+  migrate:
+    profiles: ["migrate"]
+    build: .
+    container_name: migrate
+    entrypoint: ["/app/efbundle"]
     depends_on:
-      migrate:
-        condition: service_completed_successfully
+      db:
+        condition: service_healthy
+    environment:
+      ConnectionStrings__Postgres: "Host=postgres;Port=5432;Database=taxcalculator;Username=postgres;Password=postgres"
 
-  e2e-tests:
+
+  e2e:
     profiles: ["e2e"]
     build:
       dockerfile: Dockerfile.playwright
       context: .
-    container_name: e2e-tests
+    container_name: e2e
     depends_on:
       app:
         condition: service_healthy
-
+    environment:       
+      CI: 1
+    network_mode: "service:app"
 
 volumes:
   postgres_data:
