Fix validate scripts

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   backend-tests:
-    name: Backend Tests
+    name: Unit Tests - C# 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
         run: dotnet test backend/TaxCalculator.sln --no-build --verbosity normal
   
   frontend-unit-tests:
-    name: Frontend Unit Tests
+    name: Unit Tests - Angular
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -46,7 +46,7 @@ jobs:
         run: npm test -- --browsers=ChromeHeadless --watch=false --code-coverage
   
   frontend-e2e-tests:
-    name: Frontend E2E Tests
+    name: Playwright Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -54,12 +54,5 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Apply database migrations
-        run: docker compose run migrate
-      
       - name: Run E2E tests with Docker Compose
-        run: docker compose run e2e
-        
-      - name: Clean up Docker containers
-        if: always()
-        run: docker compose down -v
+        run: docker compose run --rm e2e
