check lints and format in prs

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -4,28 +4,54 @@ on:
   workflow_call:
 
 jobs:
-  backend-tests:
-    name: Unit Tests - C# 
+  backend:
+    name: Validate C# 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+
     steps:
       - uses: actions/checkout@v4
-      
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '9.0.x'
           
       - name: Restore dependencies
-        run: dotnet restore backend/TaxCalculator.sln
+        run: dotnet restore && dotnet tool restore
         
       - name: Build
         run: dotnet build backend/TaxCalculator.sln --no-restore
         
       - name: Test
         run: dotnet test backend/TaxCalculator.sln --no-build --verbosity normal
+
+      - name: Check formatting
+        run: dotnet csharpier check .
+
+  frontend:
+    name: Validate Angular
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Angular linter
+        run: npm run lint
   
-  
-  e2e-tests:
+  e2e:
     name: Playwright Tests
     runs-on: ubuntu-latest
     steps:
@@ -34,5 +60,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: Run E2E tests with Docker Compose
+      - name: Build image
+        run: docker compose --profile e2e build e2e
+
+      - name: Run E2E tests 
         run: docker compose run --rm e2e
