--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   backend:
-    name: Validate C# 
+    name: C# 
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -31,7 +31,7 @@ jobs:
         run: dotnet csharpier check .
 
   frontend:
-    name: Validate Angular
+    name: Angular
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -52,7 +52,7 @@ jobs:
         run: npm run lint
   
   e2e:
-    name: Playwright Tests
+    name: Playwright
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
